# cpp_ub_template_multiple_inst

./: CMakeLists.txt  LICENSE  README.md  main.cpp  one.cpp  shared.hpp  two.cpp
